--- a/README
+++ b/README
@@ -1,9 +1,11 @@
 # Remarkable through wine for wayland
+*note this is for installs under wayland, it is likely the case that you do not
+need `wl-copy/wl-paste` if using Xorg
 
 packages required
-- xclip
-- wine
-- wl-copy / wl-paste
+- `xclip`
+- `wine`
+- `wl-copy` / `wl-paste`
 
 `./update`: will pull the latest desktop installer and copy the wine path to
-`application` folder allowing allowing for easy install
+`application` folder allowing for easy install
